<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_screen"
    android:screenOrientation="landscape">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/register_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:text="Register" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_button"
            android:layout_alignLeft="@+id/register_button"
            android:layout_alignStart="@+id/register_button"
            android:text="Login" />

        <EditText
            android:id="@+id/username"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_marginBottom="13dp"
            android:background="#FFFFFF"
            android:hint="username"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_button"
            android:layout_alignLeft="@+id/login_button"
            android:layout_alignStart="@+id/login_button"
            android:layout_marginBottom="11dp"
            android:background="#FFFFFF"
            android:hint="password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/ip_address"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/username"
            android:layout_alignStart="@+id/username"
            android:layout_marginBottom="14dp"
            android:background="#FFFFFF"
            android:hint="IP Address"
            android:paddingLeft="10dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>