<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <tickets.client.gui.views.MapView
        android:id="@+id/gameMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>

<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/background">-->

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:srcCompat="@drawable/map" />-->
<!--</android.support.constraint.ConstraintLayout>-->